namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pic
---
apiVersion: v1
kind: Namespace
metadata:
  name: env-production
