ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: pic
spec:
  tls:
  - hosts:
    - registry.192.168.99.100.nip.io
    secretName: registry-tls
  rules:
  - host: registry.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: registry
          servicePort: 8080
