kibana-ingress-gke.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: efk-kibana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kibana.35.193.56.167.nip.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: efk-kibana
          servicePort: 5601
